--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -37,14 +37,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
         },
         "id": "T3EvaeQ_INIL",
-        "outputId": "55429fed-15db-4ba5-b72f-4cc69c5c2994"
+        "outputId": "87f84940-43e8-43cf-a9dd-448e5c408d52"
       },
       "outputs": [
         {
@@ -94,7 +94,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9e5d89fc-7008-452b-a1a8-e0fe000d4560\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-12688b98-011c-42a2-b711-1416365ea7ed\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -300,7 +300,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9e5d89fc-7008-452b-a1a8-e0fe000d4560')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-12688b98-011c-42a2-b711-1416365ea7ed')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -352,12 +352,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-9e5d89fc-7008-452b-a1a8-e0fe000d4560 button.colab-df-convert');\n",
+              "        document.querySelector('#df-12688b98-011c-42a2-b711-1416365ea7ed button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-9e5d89fc-7008-452b-a1a8-e0fe000d4560');\n",
+              "        const element = document.querySelector('#df-12688b98-011c-42a2-b711-1416365ea7ed');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -377,7 +377,7 @@
               "  </div>\n",
               "\n",
               "\n",
-              "  <div id=\"id_aa720a0b-c439-417c-9538-a8d3e6521f57\">\n",
+              "  <div id=\"id_d36ee3a5-6127-41c5-b34e-f3003633db6c\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -421,7 +421,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_aa720a0b-c439-417c-9538-a8d3e6521f57 button.colab-df-generate');\n",
+              "        document.querySelector('#id_d36ee3a5-6127-41c5-b34e-f3003633db6c button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -442,7 +442,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 2
+          "execution_count": 1
         }
       ],
       "source": [
@@ -1908,21 +1908,270 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "envio1 = tienda[\"Costo de envío\"].mean()\n",
+        "envio2 = tienda2[\"Costo de envío\"].mean()\n",
+        "envio3 = tienda3[\"Costo de envío\"].mean()\n",
+        "envio4 = tienda4[\"Costo de envío\"].mean()\n",
+        "\n",
+        "envio1, envio2, envio3, envio4"
+      ],
       "metadata": {
-        "id": "S2JeaCykZNy9"
+        "id": "S2JeaCykZNy9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5ce1da94-85af-4df6-e8fd-6662001347a7"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(np.float64(26018.60958033065),\n",
+              " np.float64(25216.235693090293),\n",
+              " np.float64(24805.680373039424),\n",
+              " np.float64(23459.457167090754))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "envios_promedio = pd.DataFrame({\n",
+        "    \"Tienda\": [\"Tienda 1\", \"Tienda 2\", \"Tienda 3\", \"Tienda 4\"],\n",
+        "    \"Costo de Envio Promedio\":[\n",
+        "        envio1,\n",
+        "        envio2,\n",
+        "        envio3,\n",
+        "        envio4\n",
+        "    ]\n",
+        "})\n",
+        "\n",
+        "envios_promedio"
+      ],
       "metadata": {
-        "id": "0tSdCie9ZQlt"
+        "id": "0tSdCie9ZQlt",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 175
+        },
+        "outputId": "2d62bbd6-9b04-4f8d-ec55-1eec16f30c3a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "     Tienda  Costo de Envio Promedio\n",
+              "0  Tienda 1                 26018.61\n",
+              "1  Tienda 2                 25216.24\n",
+              "2  Tienda 3                 24805.68\n",
+              "3  Tienda 4                 23459.46"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-c5df5b7e-22f9-4c94-b43e-4d0ee0218b97\" class=\"colab-df-container\">\n",
+              "    <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Tienda</th>\n",
+              "      <th>Costo de Envio Promedio</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Tienda 1</td>\n",
+              "      <td>26018.61</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Tienda 2</td>\n",
+              "      <td>25216.24</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Tienda 3</td>\n",
+              "      <td>24805.68</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Tienda 4</td>\n",
+              "      <td>23459.46</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "    <div class=\"colab-df-buttons\">\n",
+              "\n",
+              "  <div class=\"colab-df-container\">\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c5df5b7e-22f9-4c94-b43e-4d0ee0218b97')\"\n",
+              "            title=\"Convert this dataframe to an interactive table.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
+              "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "\n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-buttons div {\n",
+              "      margin-bottom: 4px;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "    <script>\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#df-c5df5b7e-22f9-4c94-b43e-4d0ee0218b97 button.colab-df-convert');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      async function convertToInteractive(key) {\n",
+              "        const element = document.querySelector('#df-c5df5b7e-22f9-4c94-b43e-4d0ee0218b97');\n",
+              "        const dataTable =\n",
+              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                    [key], {});\n",
+              "        if (!dataTable) return;\n",
+              "\n",
+              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "          + ' to learn more about interactive tables.';\n",
+              "        element.innerHTML = '';\n",
+              "        dataTable['output_type'] = 'display_data';\n",
+              "        await google.colab.output.renderOutput(dataTable, element);\n",
+              "        const docLink = document.createElement('div');\n",
+              "        docLink.innerHTML = docLinkHtml;\n",
+              "        element.appendChild(docLink);\n",
+              "      }\n",
+              "    </script>\n",
+              "  </div>\n",
+              "\n",
+              "\n",
+              "  <div id=\"id_d3a87697-d598-49f3-8272-d332c9e80533\">\n",
+              "    <style>\n",
+              "      .colab-df-generate {\n",
+              "        background-color: #E8F0FE;\n",
+              "        border: none;\n",
+              "        border-radius: 50%;\n",
+              "        cursor: pointer;\n",
+              "        display: none;\n",
+              "        fill: #1967D2;\n",
+              "        height: 32px;\n",
+              "        padding: 0 0 0 0;\n",
+              "        width: 32px;\n",
+              "      }\n",
+              "\n",
+              "      .colab-df-generate:hover {\n",
+              "        background-color: #E2EBFA;\n",
+              "        box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "        fill: #174EA6;\n",
+              "      }\n",
+              "\n",
+              "      [theme=dark] .colab-df-generate {\n",
+              "        background-color: #3B4455;\n",
+              "        fill: #D2E3FC;\n",
+              "      }\n",
+              "\n",
+              "      [theme=dark] .colab-df-generate:hover {\n",
+              "        background-color: #434B5C;\n",
+              "        box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "        filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "        fill: #FFFFFF;\n",
+              "      }\n",
+              "    </style>\n",
+              "    <button class=\"colab-df-generate\" onclick=\"generateWithVariable('envios_promedio')\"\n",
+              "            title=\"Generate code using this dataframe.\"\n",
+              "            style=\"display:none;\">\n",
+              "\n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M7,19H8.4L18.45,9,17,7.55,7,17.6ZM5,21V16.75L18.45,3.32a2,2,0,0,1,2.83,0l1.4,1.43a1.91,1.91,0,0,1,.58,1.4,1.91,1.91,0,0,1-.58,1.4L9.25,21ZM18.45,9,17,7.55Zm-12,3A5.31,5.31,0,0,0,4.9,8.1,5.31,5.31,0,0,0,1,6.5,5.31,5.31,0,0,0,4.9,4.9,5.31,5.31,0,0,0,6.5,1,5.31,5.31,0,0,0,8.1,4.9,5.31,5.31,0,0,0,12,6.5,5.46,5.46,0,0,0,6.5,12Z\"/>\n",
+              "  </svg>\n",
+              "    </button>\n",
+              "    <script>\n",
+              "      (() => {\n",
+              "      const buttonEl =\n",
+              "        document.querySelector('#id_d3a87697-d598-49f3-8272-d332c9e80533 button.colab-df-generate');\n",
+              "      buttonEl.style.display =\n",
+              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "      buttonEl.onclick = () => {\n",
+              "        google.colab.notebook.generateWithVariable('envios_promedio');\n",
+              "      }\n",
+              "      })();\n",
+              "    </script>\n",
+              "  </div>\n",
+              "\n",
+              "    </div>\n",
+              "  </div>\n"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "dataframe",
+              "variable_name": "envios_promedio",
+              "summary": "{\n  \"name\": \"envios_promedio\",\n  \"rows\": 4,\n  \"fields\": [\n    {\n      \"column\": \"Tienda\",\n      \"properties\": {\n        \"dtype\": \"string\",\n        \"num_unique_values\": 4,\n        \"samples\": [\n          \"Tienda 2\",\n          \"Tienda 4\",\n          \"Tienda 1\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Costo de Envio Promedio\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": 1069.7120162099236,\n        \"min\": 23459.457167090754,\n        \"max\": 26018.60958033065,\n        \"num_unique_values\": 4,\n        \"samples\": [\n          25216.235693090293,\n          23459.457167090754,\n          26018.60958033065\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+            }
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
     }
   ]
 }
